fixed scripts locations

--- a/frontend/visualizzazionePartite.html
+++ b/frontend/visualizzazionePartite.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Visualizzazione Partite</title>
+        <script src="./script.js"></script>
     </head>
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
