--- a/frontend/setupTorneo.html
+++ b/frontend/setupTorneo.html
@@ -31,10 +31,11 @@
                     <label for="fname" >Numero gironi: *</label><br>
                     <input list="gironi" name ="gironi" id="gironi" required>
 
-                    <datalist id="gironi">
-                        <option value="4">
-                        <option value="8">
-                    </datalist>
+                    <select name="gironi" id="gironi">
+                        <option value="4">4</option>
+                        <option value="8">8</option>
+                    </select>
+
 
                     <p>
                         le squadre che per ogni girone accedono alle fasi finali sono 1 se il numero di gironi è 8,
