--- a/frontend/setupTorneo.html
+++ b/frontend/setupTorneo.html
@@ -12,7 +12,7 @@
    
 </head>
 
-<body>
+<body onload="verificaToken()">
     <!-- Header PAGINA DI MODIFICA -->
     <section>
         <div class="main-banner" id="top">
@@ -66,6 +66,7 @@
 
 </body>
 <script>
+    let token;
     function apriPopup(){
         var w = 100;
         var h = 50;
@@ -122,7 +123,7 @@
             dataType: 'json',
             async: false,
             headers: {
-                'x-access-token': getCookie("token")
+                'x-access-token': token
             },
         })
         .done(function(res) {
@@ -141,6 +142,16 @@
 
     const form = document.getElementById("myform");
     form.addEventListener("submit",sendData)
+
+    function verificaToken(){
+        token=getCookie("token")
+        if(!token){
+            alert("questa apgina è accessibie solo previo accesso!")
+            window.location.replace("index.html");   
+            return
+        }
+    }
+
 </script>
 
 </html>
