--- a/frontend/aggiungiPartita.html
+++ b/frontend/aggiungiPartita.html
@@ -10,7 +10,7 @@
         <script src="./script.js"></script>
     </head>
 
-    <body>
+    <body onload="verificaToken()">
         <section>
             <div class="main-banner" id="top">
                 <div class="caption" bgcolour="grey">
