--- a/frontend/approvaSquadre.html
+++ b/frontend/approvaSquadre.html
@@ -5,7 +5,7 @@
         <script src="./script.js"></script>
     </head>
 
-    <body onload="loadSquadre()">
+    <body onload="verificaToken();loadSquadre()">
         <div id="squadre"></div>
          <!-- Footer bottone HOME -->
         <div class="footer">
