--- a/frontend/setupTorneo.html
+++ b/frontend/setupTorneo.html
@@ -145,7 +145,7 @@
     function verificaToken(){
         token=getCookie("token")
         if(!token){
-            alert("questa apgina è accessibie solo previo accesso!")
+            alert("questa pagina è accessibie solo previo accesso!")
             window.location.replace("index.html");   
             return
         }
