--- a/frontend/inserimentoReferto.html
+++ b/frontend/inserimentoReferto.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 <link rel="stylesheet" href="assets/css/ModificaStyle.css">
+<script src="./script.js"></script>
 
 <body>
     <!-- Header PAGINA DI inserimento Referto -->
